Refactor friend request system
Add friend request class + repository. A friendship has to go through requestsDatabase to become available. It sitts there until the other user accepts it and then goes to friendshipRepo ( Here we will keep only the approved friendships), if he gets rejected he can't add a new friend request. The 2nd user has to request it. If the friendship gets deleted, the friendRequest gets reset. It ain't much but it's honest work!